# quilon

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LANGUAGE.md  README.md  build.rs
.github/copilot/: agents.yaml  skills.yaml
.github/workflows/: ci.yml  release.yml  vscode-extension.yml
corelib/: io.ql  text.ql
docs/: syntax.md
editors/vscode/: .npmrc  .oxfmtrc.json  .oxlintrc.json  .vscodeignore  README.md  extension.js  language-configuration.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
editors/vscode/src/: diagnostics.test.ts  diagnostics.ts  entryPoints.test.ts  entryPoints.ts  extension.ts  grammar.test.ts  grammar.ts
editors/vscode/syntaxes/: quilon.tmLanguage.json
examples/: args_test  args_test.ql  arithmetic.ql  array_size.ql  array_size_simple  array_size_simple.ql  arrays.ql  closures.ql  composites.ql  constructor_test.ql  demo_lexer.rs  demo_parser.rs  factorial  factorial.ql  fibonacci.ql  for_loop.ql  for_loop_comprehensive.ql  for_loop_simple_test.ql  for_loop_test.ql  hello.ql  hello_world  hello_world.ql  io.ql  library.ql  logical.ql  math  math.ql  mathlib.ql  method_test.ql  methods.ql  methods_call_test.ql  methods_demo.ql  methods_simple.ql  mutation.ql  option  option.ql  overloading.ql  pattern_match.ql  pattern_wildcard  pattern_wildcard.ql  (+22 more)
quilon-rt/: Cargo.toml
quilon-rt/src/: lib.rs
scripts/: aot.sh
src/: build.rs  diagnostic.rs  driver.rs  jit.rs  lib.rs  main.rs  modules.rs
src/ast/: captures.rs  mod.rs  nodes.rs  types.rs
src/codegen/: generator.rs  mod.rs  num_type.rs
src/lexer/: lexer.rs  mod.rs  token.rs
src/parser/: ast_parser.rs  mod.rs
src/runtime/: intrinsics.rs  io.rs  mod.rs  parallel.rs
src/typechecker/: checker.rs  inference.rs  mod.rs
tests/: closures_test.rs  composite_text_test.rs  diagnostics_test.rs  examples_test.rs  integration_test.rs  io_codegen_test.rs  lexer_tests.rs  module_test.rs  ranges_test.rs  run_test.rs  sum_codegen_test.rs  sum_constructors_test.rs  sum_user_test.rs  tail_call_test.rs
tests/fixtures/: mathlib.ql
