[package]
name = "quilon"
version = "0.1.0"
edition = "2024"
authors = ["Assaf Sapir <assaf@sapir.io>"]
description = "A fast, statically-typed web programming language"

[dependencies]
# LLVM code generation - using latest Inkwell with LLVM 21
inkwell = { version = "0.9", features = ["llvm21-1"] }

# Lexing
logos = "0.16"

# Unicode-aware text operations (grapheme cluster counting for Text.length)
unicode-segmentation = "1"

# CLI
clap = { version = "4.5", features = ["derive"] }
