[package]
name = "quilon"
version = "0.9.0"
edition = "2024"
authors = ["Assaf Sapir <assaf@sapir.io>"]
description = "A fast, statically-typed web programming language"

[workspace]
members = ["quilon-rt"]

[dependencies]
# LLVM code generation - latest Inkwell targeting LLVM 22
inkwell = { version = "0.9", features = ["llvm22-1"] }

# Lexing
logos = "0.16"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Runtime intrinsics (GC alloc, grapheme counting, output). Linked as an rlib so
# the JIT resolves the same `#[no_mangle]` symbols it maps; also built as a
# staticlib (`libquilon_rt.a`) for ahead-of-time-linked native binaries.
quilon-rt = { path = "quilon-rt" }
